--- a/02-cost-control/src/index.css
+++ b/02-cost-control/src/index.css
@@ -132,13 +132,14 @@ header h1 {
 }
 
 .alerta {
-    padding: 2rem 5rem;
+    padding: 0.2rem 5rem;
     max-width: 60rem;
     margin: 2rem auto 2rem auto;
     font-weight: 900;
     text-transform: uppercase;
     font-size: 1.8rem;
     text-align: center;
+    border-radius: 0.5rem;
 }
 .alerta.error {
     background-color: var(--blanco);
@@ -232,6 +233,7 @@ header h1 {
 }
 
 main {
+    background-color: var(--gris-claro);
     padding-top: 10rem;
 }
 
