--- a/02-cost-control/src/index.css
+++ b/02-cost-control/src/index.css
@@ -130,17 +130,19 @@ header h1 {
     text-align: center;
     background-color: var(--gris-claro);
 }
+.alertas{
+    margin-top: 1.5rem;
+}
 
 .alerta {
     padding: 0.2rem 5rem;
     max-width: 60rem;
-    margin: 2rem auto 2rem auto;
     font-weight: 900;
     text-transform: uppercase;
     font-size: 1.8rem;
     text-align: center;
-    border-radius: 0.5rem;
 }
+
 .alerta.error {
     background-color: var(--blanco);
     border-left: 5px solid #b91c1c;
